--- a/index.html
+++ b/index.html
@@ -83,14 +83,6 @@
       transform: translateY(0);
     }
 
-    .section:nth-of-type(odd) {
-      margin-left: calc(50% - 350px + 20px);
-    }
-
-    .section:nth-of-type(even) {
-      margin-left: calc(50% - 350px - 20px);
-    }
-
     .section h2 {
       font-family: 'Playfair Display', serif;
       font-size: 2rem;
@@ -166,6 +158,10 @@
         padding: 20px;
       }
 
+      .section p {
+        font-size: 1rem;
+      }
+
       .btn-brani {
         font-size: 1rem;
       }
@@ -210,7 +206,21 @@
       <img src="ideologia.jpg" alt="Pier Paolo Pasolini">
     </div>
     <p>
-      Critico feroce del consumismo e della società borghese, Pasolini difendeva le culture popolari e denunciava l'omologazione indotta dal potere e dai media.
+      Il pensiero poetico di Pasolini è fortemente influenzato dai suoi viaggi e dalle esperienze vissute, in particolare dopo il trasferimento a Roma. Qui comincia a interessarsi al sottoproletariato, non tanto per la loro lotta di emancipazione sociale, quanto per la loro spontaneità, vitalità e autenticità. Questa attrazione genera una tensione: da un lato Pasolini esalta la purezza e l’umanità di queste persone, dall’altro sente la necessità di denunciare le loro condizioni di miseria e degrado, in parte influenzato dalla sua adesione al marxismo.
+      <br><br>
+      La sua poesia si nutre di questo conflitto, oscillando tra impegno civile e riflessione privata. Temi come il neocapitalismo, il consumismo e l’omologazione culturale diventano centrali, ma si intrecciano con il dolore personale.
+      <br><br>
+      Questi elementi trovano espressione nella raccolta <em>Le ceneri di Gramsci</em> (1957), composta da undici poemetti. Il poeta medita davanti alla tomba di Antonio Gramsci, nel Cimitero degli Inglesi a Roma. In quest’opera Pasolini riflette sul fallimento delle speranze di rinnovamento sociale, deluso dal consolidarsi di forze politiche conservatrici e borghesi.
+      <br><br>
+      Nelle opere successive la sua critica si fa sempre più aspra: denuncia apertamente la devastazione culturale e antropologica causata dal neocapitalismo, che secondo lui annienta le identità popolari e omologa l’individuo. Il tono civile si fa più intimo: l’impegno politico diventa introspezione, fino a farsi confessione di un uomo emarginato, in conflitto con la società moderna. Da qui nasce il rimpianto per l’infanzia, la nostalgia per un’Italia contadina ormai scomparsa e una rabbia sempre più cupa verso il presente.
+      <br><br>
+      La caratteristica fondamentale della poesia di Pier Paolo Pasolini è quella di essere in equilibrio tra mondi diversi:
+      <br>• colto e popolare;
+      <br>• nazionale e universale;
+      <br>• città e campagna;
+      <br>• dialetto e italiano.
+      <br><br>
+      La poesia è un diario intellettuale, attraverso cui esprimere il proprio pensiero e agire per migliorare il mondo.
     </p>
   </section>
 
