--- a/brani.html
+++ b/brani.html
@@ -61,6 +61,7 @@
       font-size: 1.1rem;
       line-height: 1.7;
       text-align: justify;
+      white-space: pre-line; /* Mantiene la formattazione del testo, come ritorni a capo e spazi */
     }
 
     @keyframes fadeIn {
@@ -88,37 +89,109 @@
   <section class="section">
     <h2>Il furto del Riccetto</h2>
     <p>
-      Tratto da "Ragazzi di vita", questo brano racconta la vicenda del Riccetto, un giovane del sottoproletariato romano, colto nell’atto di rubare. Pasolini descrive la scena con uno stile diretto e crudo, mettendo in luce la miseria e l’ingenuità dei ragazzi di borgata, vittime e protagonisti di una realtà violenta e degradata. Il tono è partecipe ma non pietistico, e restituisce la vitalità disperata di chi vive ai margini.
+      Il brano è tratto dal romanzo <em>Ragazzi di vita</em> (1955). In esso Pasolini mette in contrasto le pulsioni vitali e spontanee del popolo con le contraddizioni della società borghese capitalista. Ambientato nella periferia romana, il testo descrive l’esistenza difficile di ragazzi emarginati, spinti a lottare per la sopravvivenza, anche attraverso il furto. I giovani protagonisti incarnano il desiderio di conservare un’autenticità minacciata dalle convenzioni morali della società dominante. Il poeta riflette in queste azioni il suo desiderio di libertà.
     </p>
   </section>
 
   <section class="section">
-    <h2>Il pianto della scavatrice</h2>
-    <p>
-      In questa poesia, Pasolini crea un parallelismo lirico tra la macchina — la scavatrice — e la condizione umana. Il pianto della scavatrice, figura dolente e umanizzata, rappresenta il dolore e la trasformazione forzata della natura e del paesaggio sotto il peso del progresso. È una denuncia poetica contro la violenza della modernità sul mondo contadino, a cui l’autore è profondamente legato.
-    </p>
-  </section>
+  <h2>Il pianto della scavatrice</h2>
+  
+
+  <p>
+    In questo poemetto Pasolini esprime il senso di estraneità verso il mondo che lo circonda e la difficoltà di amare veramente. All’inizio prevale un sentimento di disillusione: il poeta è stanco, privo di entusiasmo, prigioniero di un amore consumato e sterile.<br>
+    Ma quando il paesaggio cambia, il tono si fa più vivo: osservando la vitalità del sottoproletariato romano, giovani operai, ragazzi di borgata, Pasolini riscopre la bellezza della città e la forza delle esperienze semplici.<br>
+    Attratto da questo mondo povero ma autentico, tenta di stabilire un legame di solidarietà. Tuttavia, ammette di non potersi identificare del tutto con loro: la distanza culturale e sociale rimane.
+  </p>
+</section>
+
 
   <section class="section">
-    <h2>Alla mia nazione</h2>
-    <p>
-      Con tono duro e amaro, Pasolini si rivolge direttamente all’Italia, criticando il conformismo, l’ipocrisia e l’imborghesimento della società. La poesia è una dichiarazione d’amore disillusa verso una patria che l’autore sente di non riconoscere più. È un testo provocatorio e lucido, che unisce rabbia e malinconia in un’accusa alla perdita dei valori autentici.
-    </p>
-  </section>
+  <h2>Alla mia nazione</h2>
+  <p>
+    Non popolo arabo, non popolo balcanico, non popolo antico,<br>
+    ma nazione vivente, ma nazione europea:<br>
+    e cosa sei? Terra di infanti, affamati, corrotti,<br>
+    governanti impiegati di agrari, prefetti codini,<br>
+    avvocatucci unti di brillantina e i piedi sporchi,<br>
+    funzionari liberali carogne come gli zii bigotti,<br>
+    una caserma, un seminario, una spiaggia libera, un casino!<br>
+    Milioni di piccoli borghesi come milioni di porci<br>
+    pascolano sospingendosi sotto gli illesi palazzotti,<br>
+    tra case coloniali scrostate ormai come chiese.<br>
+    Proprio perché tu sei esistita, ora non esisti,<br>
+    proprio perché fosti cosciente, sei incosciente.<br>
+    E solo perché sei cattolica, non puoi pensare<br>
+    che il tuo male è tutto il male: colpa di ogni male.<br>
+    Sprofonda in questo tuo bel mare, libera il mondo.
+  </p>
+
+  <p>
+    In questa poesia, Pier Paolo Pasolini esprime un profondo senso di disillusione e smarrimento nei confronti dell’Italia del dopoguerra, che egli non riconosce più come patria. È rivolto ad un paese che, pur definendosi moderno e europeo, ha perso le proprie radici culturali e civili. Segue un elenco durissimo e grottesco che delinea un’immagine degradata della società italiana: un Paese abitato da affamati, corrotti, burocrati servili, borghesi ipocriti, funzionari meschini, governato da mediocrità. Il poeta denuncia la trasformazione antropologica del Paese. Il verso finale è un atto estremo di dolore e di rabbia: la fine della nazione è vista come un atto necessario alla salvezza di qualcosa di più grande, forse dell’umanità intera.
+  </p>
+</section>
+
 
   <section class="section">
-    <h2>Profezia</h2>
-    <p>
-      "Profezia" è un testo visionario e potente, in cui Pasolini immagina una migrazione dall’Africa verso l’Italia, anticipando temi oggi molto attuali. Il poeta invoca un cambiamento che scardini la società italiana, corrotta e chiusa. Il brano si distingue per la sua carica etica e per l’intensità espressiva, rendendo Pasolini una voce profetica e coraggiosa.
-    </p>
-  </section>
+  <h2>Profezia</h2>
+  
+  <p>
+    Pasolini immagina che dal nord dell’Africa giungano in Italia nuovi popoli, guidati dal loro capo Alì dagli Occhi Azzurri, che unisce nel nome mediorientale e nel particolare fisico degli occhi azzurri due mondi: quello orientale e quello occidentale, il sud e il nord. Questi uomini che scendono dalle navi di Algeri si riconoscono nei calabresi e vengono riconosciuti da loro come fratelli. Anche loro emigrano, come gli italiani di quegli anni, che andavano a cercare fortuna all’estero o nelle città del nord e finivano per dimenticare il loro mondo abbagliati dallo scintillio di automobili ed elettrodomestici, simboli della società dei consumi. I compagni di Alì sono invece i portatori di una nuova innocenza, prendono il posto dei contadini che hanno abbandonato la terra e un giorno, essi che sono sempre stati timidi, sudditi, piccoli, si eleveranno dalla loro condizione per insegnare a chi l’ha ormai dimenticata la gioia della libertà e la gioia della vita, dirigendosi verso nord a portare una nuova rivoluzione.
+  </p>
+</section>
+
 
   <section class="section">
-    <h2>La crocifissione</h2>
-    <p>
-      In questo brano tratto dal film "Il Vangelo secondo Matteo", Pasolini mette in scena la crocifissione di Cristo con una potenza visiva e simbolica straordinaria. Pur mantenendo la fedeltà evangelica, la scena è riletta in chiave moderna, con un pathos che unisce spiritualità e impegno civile. È una rappresentazione sobria ma intensa del sacrificio, carica di significato universale.
-    </p>
-  </section>
+  <h2>La crocifissione</h2>
+  
+  <p>
+    Tutte le piaghe sono al sole<br>
+    ed Egli muore sotto gli occhi<br>
+    di tutti: perfino la madre<br>
+    sotto il petto, il ventre, i ginocchi,<br>
+    guarda il Suo corpo patire.<br>
+    L’alba e il vespro Gli fanno luce<br>
+    sulle braccia aperte e l’Aprile<br>
+    intenerisce il Suo esibire<br>
+    la morte a sguardi che Lo bruciano.<br>
+    Perché Cristo fu ESPOSTO in Croce?<br>
+    Oh scossa del cuore al nudo<br>
+    corpo del giovinetto…atroce<br>
+    offesa al suo pudore crudo…<br>
+    Il sole e gli sguardi! La voce<br>
+    estrema chiese a Dio perdono<br>
+    con un singhiozzo di vergogna<br>
+    rossa nel cielo senza suono,<br>
+    tra pupille fresche e annoiate<br>
+    di Lui: morte, sesso e gogna.<br>
+    Bisogna esporsi (questo insegna<br>
+    il povero Cristo inchiodato?),<br>
+    la chiarezza del cuore è degna<br>
+    di ogni scherno, di ogni peccato<br>
+    di ogni più nuda passione<br>
+    (questo vuol dire il Crocifisso?<br>
+    sacrificare ogni giorno il dono<br>
+    rinunciare ogni giorno al perdono<br>
+    sporgersi ingenui sull’abisso.)<br>
+    Noi staremo offerti sulla croce,<br>
+    alla gogna, tra le pupille<br>
+    limpide di gioia feroce,<br>
+    scoprendo all’ironia le stille<br>
+    del sangue dal petto ai ginocchi,<br>
+    miti, ridicoli, tremando<br>
+    d’intelletto e passione nel gioco<br>
+    del cuore arso dal suo fuoco,<br>
+    per testimoniare lo scandalo.
+  </p>
+
+  <p>
+    In questa poesia, Pasolini riflette sul significato della crocifissione di Cristo, interpretandola non solo come un evento religioso, ma soprattutto come un simbolo universale di dolore, vergogna e verità esposta. Cristo, nudo sulla croce, è mostrato nella sua massima vulnerabilità, sotto lo sguardo impassibile degli uomini, della natura, e persino della madre. Questo atto di esposizione pubblica diventa per il poeta una lezione profonda: chi vuole vivere con sincerità deve esporsi, mostrarsi agli altri senza difese, anche a costo di essere giudicato, deriso o condannato.
+  </p>
+  
+  <p>
+    Pasolini si chiede se sia proprio questo il messaggio del Cristo crocifisso: accettare il sacrificio quotidiano della propria autenticità, vivere con coerenza e coraggio, anche nella sofferenza. Chi segue questa strada – artisti, poeti, uomini sensibili – sarà “offerto alla croce”, cioè esposto al giudizio del mondo, ma porterà la testimonianza di una verità interiore profonda e scandalosa, che scuote le coscienze.
+  </p>
+</section>
+
 
   <script>
     const sections = document.querySelectorAll(".section");
