--- a/index.html
+++ b/index.html
@@ -186,19 +186,73 @@
       <img src="biografia.jpg" alt="Pier Paolo Pasolini">
     </div>
     <p>
-      Pier Paolo Pasolini nasce il 5 marzo 1922 a Bologna. Scrittore, regista, intellettuale controcorrente, fu una delle voci più acute e scomode del Novecento italiano.
+      * Nascita: 5 marzo 1922, Bologna.<br>
+      * Infanzia e giovinezza: Cresce tra il Friuli e varie città italiane a causa del lavoro del padre militare. Studia lettere a Bologna.<br>
+      * Anni ’40: Durante la guerra vive un'esperienza formativa in Friuli, dove comincia a scrivere poesie in dialetto friulano.<br>
+      * 1949: Si trasferisce a Roma dopo essere stato allontanato dall'insegnamento per accuse legate alla sua omosessualità.<br>
+      * Anni ’50-’60: Si afferma come scrittore e regista, con una forte attenzione ai temi del sottoproletariato urbano e delle trasformazioni della società italiana.<br>
+      * Morte: Viene assassinato in circostanze controverse il 2 novembre 1975 a Ostia.
     </p>
   </section>
 
   <section class="section">
-    <h2>Opere</h2>
-    <div class="image-container opere-img">
-      <img src="opere.jpg" alt="Pier Paolo Pasolini">
-    </div>
-    <p>
-      Autore di romanzi come "Ragazzi di vita" e "Una vita violenta", regista di capolavori come "Il Vangelo secondo Matteo", Pasolini ha spaziato tra poesia, saggistica e cinema.
-    </p>
-  </section>
+  <h2>Opere</h2>
+  <div class="image-container opere-img">
+    <img src="opere.jpg" alt="Pier Paolo Pasolini">
+  </div>
+  <p>
+    Autore di romanzi come "Ragazzi di vita" e "Una vita violenta", regista di capolavori come "Il Vangelo secondo Matteo", Pasolini ha spaziato tra poesia, saggistica e cinema.
+  </p>
+  <p><strong>Letteratura:</strong><br>
+    <ul>
+      <li><strong>Ragazzi di vita</strong> (1955): Romanzo che racconta la vita dei giovani borgatari romani. Suscitò scandalo e fu oggetto di processi per oscenità.</li>
+      <li><strong>Una vita violenta</strong> (1959): Continua il racconto del mondo popolare romano, tra miseria e speranza.</li>
+      <li><strong>Le ceneri di Gramsci</strong> (1957): Raccolta poetica tra le più note, che fonde il lirismo con l’impegno politico e intellettuale.</li>
+      <li><strong>Petrolio</strong> (incompiuto, pubblicato postumo nel 1992): Romanzo sperimentale e visionario che esplora temi politici e sessuali.</li>
+    </ul>
+  </p>
+  <p><strong>Cinema:</strong><br>
+    <ul>
+      <li><strong>Accattone</strong> (1961): Film d’esordio, ritratto crudo del sottoproletariato romano.</li>
+      <li><strong>Mamma Roma</strong> (1962): Con Anna Magnani, mostra la tensione tra aspirazioni e realtà sociale.</li>
+      <li><strong>Il Vangelo secondo Matteo</strong> (1964): Una delle sue opere più celebrate, una rilettura laica e intensa della vita di Cristo.</li>
+      <li><strong>Teorema</strong> (1968): Film allegorico sulla crisi della borghesia.</li>
+      <li><strong>Salò o le 120 giornate di Sodoma</strong> (1975): Ultimo film, durissimo e controverso, ispirato a Sade, una denuncia del potere e della violenza.</li>
+    </ul>
+  </p>
+  <p>
+    <strong>Ragazzi di vita</strong> (1955)<br>
+    <em>Genere:</em> Romanzo neorealista<br>
+    <em>Contesto:</em> Scritto nel primo periodo romano di Pasolini, quando viveva nelle borgate (periferie popolari) di Roma.<br>
+    <em>Trama:</em> Il romanzo segue le giornate di Riccetto e altri giovani "borgatari", ragazzi cresciuti nella miseria e nell’abbandono sociale dopo la guerra. Non c'è una vera e propria trama unitaria: il libro è composto da episodi che raccontano piccole avventure, piccoli reati, gesti quotidiani e momenti di solidarietà o violenza.<br>
+    <em>Temi principali:</em><br>
+    • Emarginazione sociale: I protagonisti sono esclusi da qualsiasi percorso di integrazione.<br>
+    • Innocenza e brutalità: I ragazzi vivono tra ingenuità infantile e durezza, senza moralismo da parte dell’autore.<br>
+    • Linguaggio: Pasolini usa il romanesco popolare accanto a uno stile alto, poetico, per dare dignità letteraria al mondo degli ultimi.<br>
+    <em>Importanza:</em> Il romanzo fu un caso editoriale e politico: denunciato per oscenità, fu però difeso da intellettuali e pubblico. Segna l’ingresso di Pasolini nella letteratura italiana come voce nuova e scomoda.
+  </p>
+  <p>
+    <strong>Una vita violenta</strong> (1959)<br>
+    <em>Genere:</em> Romanzo neorealista con sviluppo più narrativo<br>
+    <em>Trama:</em> Racconta la storia di Tommaso Puzzilli, un giovane borgataro romano. All'inizio è un delinquente, vive di espedienti e piccoli furti. Dopo il carcere, però, cerca di redimersi, si avvicina alla politica (milita nel PCI), lavora e sogna una vita normale. Alla fine, muore durante un gesto altruista: aiuta delle persone durante un’alluvione.<br>
+    <em>Temi principali:</em><br>
+    • Redenzione e coscienza politica: A differenza di Ragazzi di vita, qui c’è un vero sviluppo del protagonista.<br>
+    • Contrasto tra vitalità e morte: Tommaso vuole cambiare, ma la realtà è troppo dura e lo distrugge.<br>
+    • Lingua: Ancora una volta mescola romanesco e lingua letteraria, ma con maggiore equilibrio narrativo.<br>
+    <em>Importanza:</em> È un’opera più matura di Ragazzi di vita e mostra un tentativo di conciliare letteratura, politica e impegno civile.
+  </p>
+  <p>
+    <strong>Le ceneri di Gramsci</strong> (1957)<br>
+    <em>Genere:</em> Raccolta poetica<br>
+    <em>Forma:</em> Sonetti e poemetti in versi liberi, scritti in uno stile colto e raffinato<br>
+    <em>Titolo:</em> Si riferisce alla visita alla tomba di Antonio Gramsci, il fondatore del Partito Comunista Italiano.<br>
+    <em>Temi principali:</em><br>
+    • Conflitto interiore: Pasolini riflette sulla difficoltà di conciliare la sua sensibilità borghese, la cultura, l’omosessualità, con l’impegno politico e la militanza.<br>
+    • Ideali traditi: Critica la trasformazione della sinistra e la società italiana del dopoguerra.<br>
+    • Figure simboliche: Oltre a Gramsci, compaiono la madre, il Cristo laico, i sottoproletari. Tutti elementi che rappresentano la sua visione morale e politica del mondo.<br>
+    <em>Importanza:</em> È uno dei momenti più alti della poesia italiana del ‘900. Qui Pasolini dimostra che la poesia può essere anche uno strumento di riflessione politica e civile, senza perdere bellezza.
+  </p>
+</section>
 
   <section class="section">
     <h2>Pensiero</h2>
